k8s/v1.32.2/manifests/vault/aaa/vault/templates/server-service.yaml
---
# Source: vault/templates/server-service.yaml
# Service for Vault cluster
apiVersion: v1
kind: Service
metadata:
  name: release-name-vault
  namespace: default
  labels:
    helm.sh/chart: vault-0.28.1
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:

spec:
  # We want the servers to become available even if they're not ready
  # since this DNS is also used for join operations.
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
    - name: https-internal
      port: 8201
      targetPort: 8201
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: release-name
    component: server
