k8s/v1.32.2/manifests/vault/aaa/vault/templates/ui-service.yaml
---
# Source: vault/templates/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-vault-ui
  namespace: default
  labels:
    helm.sh/chart: vault-0.28.1
    app.kubernetes.io/name: vault-ui
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: release-name
    component: server
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  type: ClusterIP
