k8s/v1.32.2/manifests/vault/aaa/vault/templates/server-ingress.yaml
---
# Source: vault/templates/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-vault
  namespace: default
  labels:
    helm.sh/chart: vault-0.28.1
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "vault.maifuj.com"
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-vault-active
                port:
                  number: 8200
